# OpenGL-Flocking-Behavior

./: .gitignore  CMakeLists.txt  COLLABORATORS  README.md  blend.ogv  fk-assignment.tar
aBasicViewer/: CMakeLists.txt  basicMain.cpp
aChaseViewer/: BVHViewer.cpp  BVHViewer.h  CMakeLists.txt  behaviors.cpp  characterParticle.cpp  characterParticle.h
aCurveEditor/: CMakeLists.txt  CurveAssignment.html  CurveViewer.cpp  CurveViewer.h
aFKViewer/: BVHMain.cpp  BVHViewer.cpp  BVHViewer.h  CMakeLists.txt  ForwardKinematics.html
aIKViewer/: CMakeLists.txt  IKMain.cpp  IKSimple.cpp  IKSimple.h  IKSimpleMain.cpp  IKViewer.cpp  IKViewer.h  InverseKinematics.html
aMotionBlend/: BlendMain.cpp  BlendViewer.cpp  BlendViewer.h  CMakeLists.txt  MotionBlending.html
aRotations/: CMakeLists.txt  Rotations.html  RotationsViewer.cpp  RotationsViewer.h  Slerp.html  rotationsMain.cpp
libsrc/: CMakeLists.txt
libsrc/animation/: CMakeLists.txt  aAnimatables.cpp  aAnimatables.h  aBehaviorController.cpp  aBehaviorController.h  aBehaviors.cpp  aBehaviors.h  aCharacterDrawer.cpp  aCharacterDrawer.h  aChaseController.cpp  aChaseController.h  aFireworks.cpp  aFireworks.h  aIKController.cpp  aIKController.h  aIKWalkController.cpp  aIKWalkController.h  aJitter.cpp  aJitter.h  aMotion.h  aMotionBlender.cpp  aMotionBlender.h  aMotionController.cpp  aParticleSystem.cpp  aParticleSystem.h  aRotation.cpp  aRotation.h  aSplineQuaternion.cpp  aSplineQuaternion.h  aSplineVec3.cpp  aSplineVec3.h  aTransform.cpp  aTransform.h  aVector.cpp  aVector.h
libsrc/ui/: CMakeLists.txt  aBasicViewer.cpp  aBasicViewer.h  aCamera.cpp  aCamera.h  aOsUtils.cpp  aOsUtils.h  aTimer.cpp  aTimer.h  libui.vcxproj
